# tkinter_interface

./: README.md  app.py  pyproject.toml  tradutor.py
